; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_event/test/extr_test_event.c_test_registration_from_handler_hdlr.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_event/test/extr_test_event.c_test_registration_from_handler_hdlr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ESP_OK = common dso_local global i32 0, align 4
@s_test_base1 = common dso_local global i32 0, align 4
@TEST_EVENT_BASE1_EV2 = common dso_local global i32 0, align 4
@test_event_simple_handler_1 = common dso_local global i32 0, align 4
@test_event_simple_handler_2 = common dso_local global i32 0, align 4
@test_event_simple_handler_3 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32, i8*)* @test_registration_from_handler_hdlr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_registration_from_handler_hdlr(i8* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %10 = load i8*, i8** %8, align 8
  %11 = bitcast i8* %10 to i32*
  store i32* %11, i32** %9, align 8
  %12 = load i32, i32* @ESP_OK, align 4
  %13 = load i32*, i32** %9, align 8
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @s_test_base1, align 4
  %16 = load i32, i32* @TEST_EVENT_BASE1_EV2, align 4
  %17 = load i32, i32* @test_event_simple_handler_1, align 4
  %18 = load i8*, i8** %5, align 8
  %19 = call i32 @esp_event_handler_register_with(i32 %14, i32 %15, i32 %16, i32 %17, i8* %18)
  %20 = call i32 @TEST_ASSERT_EQUAL(i32 %12, i32 %19)
  %21 = load i32, i32* @ESP_OK, align 4
  %22 = load i32*, i32** %9, align 8
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* @s_test_base1, align 4
  %25 = load i32, i32* @TEST_EVENT_BASE1_EV2, align 4
  %26 = load i32, i32* @test_event_simple_handler_2, align 4
  %27 = load i8*, i8** %5, align 8
  %28 = call i32 @esp_event_handler_register_with(i32 %23, i32 %24, i32 %25, i32 %26, i8* %27)
  %29 = call i32 @TEST_ASSERT_EQUAL(i32 %21, i32 %28)
  %30 = load i32, i32* @ESP_OK, align 4
  %31 = load i32*, i32** %9, align 8
  %32 = load i32, i32* %31, align 4
  %33 = load i32, i32* @s_test_base1, align 4
  %34 = load i32, i32* @TEST_EVENT_BASE1_EV2, align 4
  %35 = load i32, i32* @test_event_simple_handler_3, align 4
  %36 = load i8*, i8** %5, align 8
  %37 = call i32 @esp_event_handler_register_with(i32 %32, i32 %33, i32 %34, i32 %35, i8* %36)
  %38 = call i32 @TEST_ASSERT_EQUAL(i32 %30, i32 %37)
  ret void
}

declare dso_local i32 @TEST_ASSERT_EQUAL(i32, i32) #1

declare dso_local i32 @esp_event_handler_register_with(i32, i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
